[gd_scene load_steps=3 format=3 uid="uid://bm46i5pn5o46n"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_rx07p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_klfn6"]
radius = 0.6
height = 3.4

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_rx07p")
SPEED = 10.0
HOLD_LERP_SPEED = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
shape = SubResource("CapsuleShape3D_klfn6")

[node name="RotationHelper" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.1, 0)

[node name="Camera" type="Camera3D" parent="RotationHelper"]
unique_name_in_owner = true

[node name="PickupNode" type="Node3D" parent="RotationHelper/Camera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="PickupRay" type="RayCast3D" parent="RotationHelper/Camera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -3.5)
debug_shape_custom_color = Color(0, 0, 1, 1)
